# AstrBot

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-dashboard.yml  smoke_test.yml
astrbot/: __init__.py  __main__.py
astrbot/_internal/: __init__.py
astrbot/_internal/agents/: __init__.py
astrbot/_internal/mcp/: __init__.py  client.py  config.py  tool.py
astrbot/_internal/runtime/: orchestrator.py
astrbot/_internal/skills/: __init__.py  loader.py  manager.py  parser.py  prompt_builder.py  to_tool.py
astrbot/_internal/stars/: runtime_status_star.py
astrbot/_internal/tools/: __init__.py  base.py  registry.py
astrbot/api/: __init__.py  mcp.py  skills.py  tools.py
astrbot/builtin_stars/session_controller/: main.py
astrbot/builtin_stars/web_searcher/: main.py  provider_constants.py  provider_routing.py
astrbot/cli/: __init__.py  __main__.py  i18n.py
astrbot/cli/commands/: __init__.py  cmd_bk.py  cmd_conf.py  cmd_init.py  cmd_plug.py  cmd_run.py  cmd_run_tui.py  cmd_tui.py  cmd_uninstall.py  tui_async.py
astrbot/cli/utils/: __init__.py  basic.py  dashboard.py
astrbot/core/: __init__.py  astr_agent_hooks.py  astr_agent_run_util.py  astr_agent_tool_exec.py  astr_main_agent.py  astr_main_agent_resources.py  astrbot_config_mgr.py  conversation_mgr.py  core_lifecycle.py  event_bus.py  exceptions.py  file_token_service.py  initial_loader.py  log.py  persona_mgr.py  subagent_orchestrator.py  updator.py
astrbot/core/agent/: mcp_client.py  run_context.py  tool.py  tool_executor.py  tool_image_cache.py  tool_session_manager.py
astrbot/core/computer/: computer_client.py  computer_tool_provider.py
astrbot/core/config/: default.py
astrbot/core/cron/: manager.py
astrbot/core/db/: po.py  (+2 more)
astrbot/dashboard/: server.py
astrbot/rust/: _core.pyi
astrbot/tui/: __init__.py  __main__.py  i18n.py  message_handler.py  screen.py  tui_app.py
dashboard/: .env.development  .env.production  .gitignore  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.vite-config.json  vite.config.mts  vite.config.ts
dashboard/public/: mdi-icons.css
dashboard/scripts/: subset-mdi-font.mjs
dashboard/src/: App.vue  config.ts  main.ts
docs/.vitepress/: config.mjs
docs/en/: startup.md
docs/skills/: astrbot-dev-guide.md
docs/zh/: faq.md  startup.md
examples/: abp_aur_plugin.py
rust/: Cargo.toml
rust/buildHooks/: custom.py
scripts/: astrbot.service  hatch_build.py
tests/: checkTranslations.ts  conftest.py  test_anthropic_kimi_code_provider.py  test_api_all.py  test_booter_decoupling.py  test_cli_utils.py  test_dashboard.py  test_docs.py  test_openai_source.py  test_pip_helper_modules.py  test_pip_installer.py  test_profile_aware_tools.py  test_skill_manager_sandbox_cache.py  test_smoke.py  test_telegram_adapter.py  test_tool_loop_agent_runner.py  test_tui.py  test_tui_message_handler.py  test_volcengine_tts.py  test_weixin_oc_client.py
tests/agent/: test_truncator.py
tests/benchmarks/: test_performance.py
tests/cli/: test_bk.py  test_uninstall.py
tests/integration/: test_lsp_integration.py
tests/unit/: test_astr_main_agent.py  test_command_filter.py  test_computer.py  test_config_number.py  test_core_lifecycle.py  test_error_messages.py  test_event_bus.py  test_initial_loader.py  test_internal_agent_sub_stage.py  test_path_util.py  test_runtime_status_star.py  test_subagent_orchestrator.py  test_web_search_engines.py  test_web_search_provider_routing.py
(+404 files in other folders)
